firestore generic repo test
